welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type int
def move( nbPas : int , versLavant: Boolean) : int =  {
                                               ^Program:2: error: not found: type int
def move( nbPas : int , versLavant: Boolean) : int =  {
                  ^